@@ -55,6 +55,7 @@ changelog.txt uses a syntax similar to RST, with a few special sequences:
 - `getplants`: ID values will now be accepted regardless of case
 -@ New borders for DFHack tool windows -- tell us what you think!
 - `gui/control-panel`: new global hotkey: tilde (Shift-backtick on most keyboards)
+- Windows now display "PAUSE FORCED" on the lower border if the tool is forcing the game to pause
 
 ## Documentation
 -@ Quickstart guide has been updated with info on new window behavior and how to use the control panel
